src/App.css
/* ... */
.toast__icon,
.toast__close {
  padding: 0 16px;
}

.toast__body {
  flex-grow: 1;
}

.toast__title {
  font-size: 1.2rem;
  font-weight: 600;
  color: #333;
}

.toast__msg {
  font-size: .9rem;
  color: #888;
  margin-top: 6px;
  line-height: 1.5;
  text-transform: capitalize;
}

.toast__close {
  font-size: 20px;
  color: rgba(0, 0, 0, 0.3);
  cursor: pointer;
}



/* responsive */

@media screen and (min-width: 740px ) {
  .menu-item {
    grid-template-columns: 225px 1fr;
    gap: 0 1.25rem;
    max-width: 40rem;
  }
  .photo {
    height: 175px;
  }
  .section-center{
    justify-content: center;
  }
}

@media (min-width: 500px) and (max-width: 1023px){
  .hideonTablet{
    display: none;
  }

  .btn-container{
    overflow: scroll;
    width: 100%;
    justify-content: flex-start;
  }

  .modal-product__content{
    width: 600px;
  }
}


@media screen and (max-width: 739px) {

  :root{
    --payment-width: calc(100% - 20px)
  }
  
  .section-center{
    justify-content: center;
  }


  .btn-container {
      overflow: scroll;
      width: 100%;
      justify-content: flex-start;
  }

  .navbar-cart__display{
      position: absolute;
      width: 100vw;
      height: 50vh;
      top: 80px;
      right: 0;
      padding: 12px;
      background-color: #fff;
      color: #111;
      border-radius: 10px;
      display: none;
      box-shadow: 0 0 15px rgb(110 110 110);
      z-index: 99;
  }

  .modal-product__content {
    background-color: var(--clr-white);
    padding: 10px;
    border-radius: var(--radius);
    position: relative;
    width: 380px;
    height: 590px;
    animation: slideTop .4s ease;
    transition: all ease .4s;
}

.modal-product__name{
  font-size: 1.6rem;
}

.size-list__size-contain {
  width: 110px;
  height: 110px;
}

.modal-product__close{
  width: 30px;
  height: 30px;
  font-size: 1.2rem;
  border-top: 2px solid var(--clr-main);
  border-right: 2px solid var(--clr-main);
  z-index: 9999;
}

.crust-list__text{
  margin-top: 24px;
}

.login-container {
  width: 400px;
  height: auto;
}

.login__content{
  padding: 10px;
}

.tracking__contain-check{
  width: 80%;
}

.cart__display{
  width: calc(100vw - 20px);
}

.method{
  width: 365px;
}

.paying-qr{
  margin: 100px auto 0;
  width: calc(100% - 40px);
  border: 1px solid black;
}

.paying-qr__code{
  display: flex;
  align-items: center;
  justify-content: center;
}

.paying-qr__content{
  width: 100%;
  display: flex;
  flex-direction: column;
  padding: 16px;
}


}

@media screen and (max-width: 500px) {

  .hideonMobile{
    display: none !important;
  }

}

@media screen and (min-width: 1024px) {

  .hideonPC{
    display: none;
  }
}


@media screen and (min-width: 1200px) {

  .hideonPC{
    display: none;
  }

  .section-center {
    width: 95vw;
    grid-template-columns: 1fr 1fr;
  }
  .photo {
    height: 150px;
  }
}

